# pypiserver

./: CLAUDE.md  Makefile  PACKAGE_REGISTRY_STRATEGY.md  PUBLISHING.md  README.md  S3_CSI_IMPLEMENTATION.md  STORAGE_BACKEND_ANALYSIS.md  artifacthub-repo.yml  docker-compose.test.yaml  index.yaml
.github/workflows/: release.yaml  test.yaml
helm/: Chart.yaml  README.md  values-hetzner-s3.yaml  values.schema.json  values.yaml
helm/templates/: _helpers.tpl  auth-secret.yaml  deployment.yaml  grafana-dashboard.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pvc.yaml  s3-secret.yaml  service.yaml  storageclass.yaml
helm/templates/tests/: test-concurrent-uploads.yaml  test-connection.yaml  test-download-package.yaml  test-multiple-versions.yaml  test-simple-index.yaml  test-storage.yaml  test-upload-package.yaml  test-uv-publish.yaml  test-web-ui.yaml
test/: EXPANDED_TEST_COVERAGE.md  FUNCTIONAL_TESTS.md  README.md  TEST_MATRIX.md  ct-config.yaml
test/fixtures/: minio-deployment.yaml
test/fixtures/test-package/: README.md  pyproject.toml
test/fixtures/test-package/test_package/: __init__.py
test/values/: test-ha-config.yaml  test-local-pv-auth.yaml  test-minimal.yaml  test-minio-s3.yaml  test-s3-auth.yaml  test-s3-ha.yaml
